[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/CurrentPlanetInfo.gd" type="Script" id=1]
[ext_resource path="res://UI/UILabelFontNormal.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/UILabelFontHeader.tres" type="DynamicFont" id=3]

[node name="CurrentPlanetInfo" type="MarginContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -310.0
margin_top = -250.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 305.0
margin_bottom = 245.0
color = Color( 0.509804, 1, 1, 0.117647 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 305.0
margin_bottom = 245.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 235.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "PLANET INFO"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 290.0
margin_bottom = 50.0

[node name="CenterContainer5" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 290.0
margin_bottom = 80.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer5"]
margin_left = 114.0
margin_right = 175.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer5/HBoxContainer"]
margin_right = 47.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Orbit: "

[node name="OrbitLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer5/HBoxContainer"]
margin_left = 51.0
margin_right = 61.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 290.0
margin_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 105.0
margin_right = 185.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 66.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Weight: "

[node name="WeightLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 80.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 290.0
margin_bottom = 140.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 103.0
margin_right = 187.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 56.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Rocks: "

[node name="RocksLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 60.0
margin_right = 84.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0%"

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 290.0
margin_bottom = 170.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer3"]
margin_left = 88.0
margin_right = 201.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 85.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Hydrogen: "

[node name="HydrogenLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 89.0
margin_right = 113.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0%"

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 290.0
margin_bottom = 200.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer4"]
margin_left = 115.0
margin_right = 175.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 32.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Ice: "

[node name="IceLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 36.0
margin_right = 60.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0%"
